--- a/templates/table/index.html
+++ b/templates/table/index.html
@@ -1,4 +1,5 @@
-{% extends 'django_table/_base.html' %}
+{# templates/table/index.html #}
+{% extends 'table/_base.html' %}
 {% block content %}
     <div class="bg-red-500">
     <div class="w-screen h-screen">
