Ejemplos vídeo 2 - ButBytes

--- a/templates/tables/_base.html
+++ b/templates/tables/_base.html
@@ -1,6 +1,8 @@
 {# templates/tables/_base.html #}
 {% extends "_base.html" %}
 
+{% block tables %}active{% endblock %}
+
 {% load render_table from django_tables2 %}
 {% load i18n %}
 
