--- a/templates/_base.html
+++ b/templates/_base.html
@@ -24,19 +24,23 @@
     </head>
 
     <body>
+
         <div id="wrapper">
-            <nav class="navbar navbar-dark bg-dark mb-5">
-                <div class="container">
-                    <a href="" class="navbar-brand">Django HTMx PlayGround</a>
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="Tables" href="{% url 'tables:products' %}">Tables</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+            <div class="container">
+            </div>
 
             <div class="container">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+                        <a href="" class="navbar-brand">Django HTMx PlayGround</a>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link {% block tables %}{% endblock %}" aria-current="Tables" href="{% url 'tables:products' %}">Tables</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% block alpine %}{% endblock %}" aria-current="Alpine" href="{% url 'alpine:home' %}">Alpine</a>
+                            </li>
+                        </ul>
+                </nav>
                 {% block main %}{% endblock %}
             </div>
         </div>
