--- a/templates/_base.html
+++ b/templates/_base.html
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                                 <a class="nav-link {% block alpine %}{% endblock %}" aria-current="Alpine" href="{% url 'alpine:home' %}">Alpine</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% block realworld %}{% endblock %}" aria-current="RealWorld" href="{% url 'realworld:home' %}">Conduit</a>
+                            </li>
                         </ul>
                 </nav>
                 {% block main %}{% endblock %}
