--- a/templates/alpine/_base.html
+++ b/templates/alpine/_base.html
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link {% block page_university %}{% endblock %}" href="{% url 'alpine:university' %}">University</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% block page_tabs %}{% endblock %}" href="{% url 'alpine:tabs' %}">Tabs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% block page_complaint %}{% endblock %}" href="{% url 'alpine:complaint' %}">Complaint</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
