--- a/templates/_base.html
+++ b/templates/_base.html
@@ -43,6 +43,12 @@
                             <li class="nav-item">
                                 <a class="nav-link {% block realworld %}{% endblock %}" aria-current="RealWorld" href="{% url 'realworld:articleshome' %}">Conduit</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% block celery %}{% endblock %}" aria-current="Celery" href="{% url 'celery:home' %}">Celery</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% block htmx %}{% endblock %}" aria-current="Htmx" href="{% url 'htmx:home' %}">Htxm</a>
+                            </li>
                         </ul>
                 </nav>
                 {% block main %}{% endblock %}
