--- a/templates/_base.html
+++ b/templates/_base.html
@@ -47,7 +47,7 @@
                                 <a class="nav-link {% block celery %}{% endblock %}" aria-current="Celery" href="{% url 'celery:home' %}">Celery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link {% block htmx %}{% endblock %}" aria-current="Htmx" href="{% url 'htmx:home' %}">Htxm</a>
+                                <a class="nav-link {% block htmx %}{% endblock %}" aria-current="Htmx" href="{% url 'htmx:home' %}">Htmx</a>
                             </li>
                         </ul>
                 </nav>
